
Camlp5 Version 8.00-alpha02:
--------------------

* [01 Aug 2020] Added purely-internal "ppxprint" (PPX-derived printers
  for AST types) so we can use it to debug.  It's disabled by default,
  so no external users should need to worry about it.

* [30 Jul 2020] fixed parser lookahead-too-far bug in revised syntax.
  Input {|(F.f 1);|} was causing lookahead to the token after the
  semicolon.

* [25 Jul 2020] add "extfold" to META.  Move much documentation from
  README.md to Sphinx/RST docs.  Add example of extending Ocaml syntax
  to tutorial.

* [24 Jul 2020] update META to allow use of all syntax-extension kits
  with original syntax.  Some of these will be breaking; we'll undo
  them as we find that they break (assuming nothing can be done to fix
  the breakage).

Camlp5 Version 8.00-alpha01:
--------------------

* [07 Jul 2020] Massive number of changes to support PPX
  extension/attribute syntax, PPX rewriters, and syntax changes thru
  Ocaml 4.10.0.  Also support for Ocaml 4.11.0, but not for syntax
  changes therein (that'll come in the next release).

  It is fair to say that this release has lots of incompatibilities
  with the previous stream, hence the bump in major version number.
  Many camlp5 users will find that things continue to work; others
  will find that they do not, I'm happy to help them upgrade their
  code.  I'll maintain the 7.xx stream of code as long as I can (in
  the face of Ocaml changes), but new function will appear here as
  part of 8.xx.  I'll try to list big changes below:

  * New set of packages in META file, so you should be able to use
    camlp5 almost exclusively via ocamlfind (not having to resort to
    the camlp5{,r,o} commands).

  * New documentation in Sphinx/RST format (thanks to Kakadu@ !) and
    this is the documentation that will be updated, going forward.
    I'll keep the old docs around for the next few releases until the
    new docs are fully-updated and cleaned-up, but eventually they'll